# ros_bridge

ros1_ws/src/arm_interfaces/: CMakeLists.txt  package.xml
ros1_ws/src/bridge_interfaces/: CMakeLists.txt  package.xml
ros1_ws/src/vision_interfaces/: CMakeLists.txt  package.xml
ros1_ws/src/vision_interfaces/msg/: Grasp2D.msg  Grasp6DPoint.msg
ros2_ws/src/arm_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/bridge_interfaces/: CMakeLists.txt  mapping_rules.yaml  package.xml
ros2_ws/src/vision_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/vision_interfaces/msg/: Grasp2DInfo.msg  Grasp6D.msg  Grasp6DInfo.msg
