<?xml version="1.0"?>
<package format="2">
  <name>arm_interfaces</name>
  <version>0.0.0</version>
  <description>The bridge_interfaces package</description>
  <maintainer email="yuheng.zhou@ubtrobot.com">yuheng.zhou</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
  </export>
</package>
